updated background color

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
     <title>React App</title>
     <style>
       body {
-        background-color: #c3dfe9; /* same as #ffcc99 */
+        background: linear-gradient(to top, #c3dfe9 0%, #ffffff 100%);
+        height:100vh /* same as #ffcc99 */
       }
       </style>
   </head>
